Add application layer with CQRS, MediatR, and DTOs
Introduce OrderService application layer with CQRS pattern using MediatR. Add commands, queries, and notification handlers for order operations. Define IOrderRepository abstraction and DTOs for data transfer. Update project structure and reference domain project.

--- a/OrderService/OrderService.Application/OrderService.Application.csproj
+++ b/OrderService/OrderService.Application/OrderService.Application.csproj
@@ -6,4 +6,14 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <Folder Include="EventHandlers\" />
+    <Folder Include="Behaviors\" />
+    <Folder Include="NotificationHandlers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <ProjectReference Include="..\OrderService.Domain\OrderService.Domain.csproj" />
+  </ItemGroup>
+
 </Project>
