Add validation and logging behaviors to application
- Integrate FluentValidation and Serilog via NuGet packages
- Add ValidationBehavior and LoggingBehavior for MediatR pipeline
- Implement validators for CreateOrderCommand and items
- Introduce ApplicationValidationException for validation errors
- Add TODO for inventory reservation in notification handler
- Update project structure and dependencies accordingly

--- a/OrderService/OrderService.Application/OrderService.Application.csproj
+++ b/OrderService/OrderService.Application/OrderService.Application.csproj
@@ -8,8 +8,13 @@
 
   <ItemGroup>
     <Folder Include="EventHandlers\" />
-    <Folder Include="Behaviors\" />
     <Folder Include="NotificationHandlers\" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="FluentValidation" Version="12.1.1" />
+    <PackageReference Include="FluentValidation.DependencyInjectionExtensions" Version="12.1.1" />
+    <PackageReference Include="Serilog" Version="4.3.0" />
   </ItemGroup>
 
   <ItemGroup>
